--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,10 +1,14 @@
 .header__link {
-  color: #FFFFFF;
+  color: #fff;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
   text-decoration: none;
-  margin: 5px;
+  margin: 2%;
+}
+
+.header__link:last-child {
+  margin-right: 0;
 }
 
 .header__link:hover {
@@ -12,7 +16,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .header__link {  
+  .header__link {
     font-size: 18px;
     line-height: 20px;
   }
