--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,3 +1,22 @@
 .place__paragraphs {
-  padding: 2%;
+  padding: 2% 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 163%;
+  color: #fff;
+  margin: 0;
+  max-width: 44vw;
+}
+
+@media screen and (max-width: 600px) {
+  .place__paragraphs {
+    font-size: 16px;
+    max-width: 90vw;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .places {
+    margin: 0 3%;
+  }
 }
