--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,21 @@
 .places {
   display: grid;
-  margin: 0 auto;
-  max-width: 950px;
+  margin: 6% auto 4%;
+  max-width: 90vw;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
+}
+
+@media screen and (min-width: 1280px) {
+  .places {
+    max-width: 80%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 550px) {
+  .places {
+    max-width: 100%;
+    padding-top: 15%;
+    margin: 0;
+  }
 }
