--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,8 +3,8 @@
   font-size: 14px;
   line-height: 16px;
   color: #fff;
-  text-align: right;
-  padding: 3% 5%;
+  text-align: end;
+  margin: 7% 5%;
 }
 
 @media screen and (max-width: 700px) {
@@ -13,3 +13,4 @@
     text-align: left;
   }
 }
+
