--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,12 +2,13 @@
   list-style-type: none;
   display: flex;
   flex-direction: row;
-  padding-left: 3%;
+  margin: 3%;
+  padding: 0;
 }
 
 @media screen and (max-width: 700px) {
   .footer__links {
     flex-direction: column;
-
   }
 }
+
