--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,20 @@
-.footer  {
-  max-width: 100%;
+.footer {
+  max-width: 95%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5px;
-  padding: 5% 0;
+  margin: 6% auto 0;
 }
 
 @media screen and (max-width: 700px) {
   .footer {
     display: block;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer {
+    margin: 6% 0 0;
+    max-width: 100%;
   }
 }
