--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,11 +3,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5px;
-  padding: 30px 50px;
+  padding: 3% 5%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1280px) {
   .header {
-    padding: 15px;
+    padding: 3% 1.5%;
   }
 }
