--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,12 +2,13 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 163%;
-  color: #FFF;
+  color: #fff;
+  max-width: 55vw;
+  margin: 6% 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   .intro__text {
-    font-size: 16px;
-    line-height: 163%;
+    max-width: 90%;
   }
 }
