--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,15 +1,15 @@
 .lead__caption {
-  color: #FFF;
+  color: #fff;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  padding-left: 5%;
+  margin: 1% 5% 0;
 }
 
 @media screen and (min-width: 1280px) {
   .lead__caption {
-    padding-left: 12%;
-  }    
+    padding-left: 4%;
+  }
 }
