--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,14 +1,14 @@
 .lead__subtitle {
-  color: #FFF;
+  color: #fff;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  margin: 32px auto 56px;
+  margin: 3% auto 5%;
   max-width: 600px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
