--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-  color: #FFF;
+  color: #fff;
   font-weight: 900;
   font-size: 96px;
   line-height: 100px;
@@ -8,7 +8,7 @@
   max-width: 720px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
