--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   margin: 0 auto;
   font-family: "Inter", "Arial", sans-serif;
-  background-color: #2A2C2F;
+  background-color: #2a2c2f;
   min-width: 320px;
   max-width: 1280px;
 }
