--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,8 +2,9 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
-  color: #FFF;
+  color: #fff;
   margin: 0;
+  max-width: 43vw;
 }
 
 @media screen and (max-width: 850px) {
@@ -13,9 +14,10 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
   .place__title {
     font-size: 32px;
     line-height: 35px;
+    max-width: 80%;
   }
 }
