--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,8 @@
 .place {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 30px 40px;
-  margin: 5% 0;
+  gap: 20px;
+  margin: 3% 0;
 }
 
 @media screen and (max-width: 768px) {
@@ -10,4 +10,4 @@
     display: block;
     margin: 0 15px;
   }
-} 
+}
