--- a/blocks/website/__link/website__link.css
+++ b/blocks/website/__link/website__link.css
@@ -2,10 +2,10 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  color: #FFF;
+  color: #fff;
   text-decoration: underline;
 }
 
 .website__link:hover {
-  color: #AAA;
+  color: #aaa;
 }
