--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,7 +4,7 @@
   line-height: 16px;
   color: #fff;
   text-align: end;
-  margin: 7% 5%;
+  margin: 6% 10%;
 }
 
 @media screen and (max-width: 700px) {
@@ -14,3 +14,20 @@
   }
 }
 
+@media screen and (min-width: 1280px) {
+  .footer__copyright {
+    margin: 6% 7%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer__copyright {
+    margin-right: 8%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .footer__copyright {
+    margin-left: 5%;
+  }
+}
