--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,8 +1,7 @@
 .footer__links {
   list-style-type: none;
   display: flex;
-  flex-direction: row;
-  margin: 3%;
+  margin: 6% 11%;
   padding: 0;
 }
 
@@ -12,3 +11,14 @@
   }
 }
 
+@media screen and (min-width: 1280px) {
+  .footer__links {
+    margin: 6% 7%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer__links {
+    margin-left: 7%;
+  }
+}
