--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -5,3 +5,21 @@
   margin: 0;
   padding-top: 2%;
 }
+
+@media screen and (min-width: 1280px) {
+  .header__links {
+    padding: 4% 1% 0 0;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .header__links {
+    padding: 5% 1% 0 0;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .header__links {
+    padding-top: 7%;
+  }
+}
