--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,8 +1,10 @@
 .cover__overlay {
-  display: flex;
-  flex-direction: column;
-  width: 1024px;
-  height: 640px;
+  display: grid;
+  justify-content: center;
+  align-items: flex-end;
+  justify-items: center;
+  width: 100%;
+  min-height: 640px;
   text-decoration: none;
   z-index: 1;
   margin: 0;
@@ -12,15 +14,15 @@
 
 .cover__overlay:hover {
   background-color: #2a2c2f;
-  opacity: 0.9;
+  opacity: 0.8;
 }
 
 .cover__overlay::before {
   background-color: #2a2c2f;
-  opacity: 0.6;
+  opacity: 0.3;
   position: absolute;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
   content: "";
   z-index: 1;
   box-sizing: border-box;
@@ -28,42 +30,31 @@
 
 @media screen and (min-width: 1280px) {
   .cover__overlay {
-    width: 1184px;
-    height: 740px;
-  }
-}
-
-@media screen and (max-width: 1050px) {
-  .cover__overlay {
-    width: 738px;
-    height: 460px;
+    max-width: 100%;
+    min-height: 740px;
   }
 }
 
 @media screen and (min-width: 780px) and (max-width: 1023px) {
   .cover__overlay {
-    width: 730px;
-    height: 456px;
+    min-height: 500px;
   }
 }
 
 @media screen and (min-width: 601px) and (max-width: 779px) {
   .cover__overlay {
-    width: 441px;
-    height: 276px;
+    min-height: 480px;
   }
 }
 
 @media screen and (min-width: 420px) and (max-width: 600px) {
   .cover__overlay {
-    width: 326px;
-    height: 240px;
+    min-height: 240px;
   }
 }
 
 @media screen and (max-width: 421px) {
   .cover__overlay {
-    width: 320px;
-    height: 200px;
+    min-height: 200px;
   }
 }
