--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,9 +4,11 @@
   line-height: 22px;
   text-align: center;
   color: #fff;
-  max-width: 36%;
-  margin: 3% auto 0;
+  max-width: 50%;
+  margin: 0;
+  margin-top: 3%;
   z-index: 3;
+  align-self: flex-start;
 }
 
 @media screen and (max-width: 600px) {
@@ -19,16 +21,6 @@
 
 @media screen and (min-width: 780px) and (max-width: 1050px) {
   .cover__subtitle {
-    max-width: 50%;
-  }
-}
-
-@media screen and (min-width: 601px) and (max-width: 779px) {
-  .cover__subtitle {
-    font-size: 14px;
-    line-height: 16px;
-    margin: 0 auto;
-    padding: 0;
-    max-width: 60%;
+    max-width: 40%;
   }
 }
