--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,12 +5,12 @@
   line-height: 18px;
   color: #fff;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 0;
   margin: 0;
 }
 
 .footer__link:hover {
-  color: #aaa;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 700px) {
