--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  max-width: 95%;
+  max-width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5px;
@@ -14,7 +14,19 @@
 
 @media screen and (min-width: 1280px) {
   .footer {
-    margin: 6% 0 0;
+    margin: 4.5% 0 0;
     max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer {
+    margin-top: 9%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .footer {
+    margin-top: 20%;
   }
 }
