--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,6 +8,19 @@
 
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 3% 1.5%;
+    padding: 2% 3.5%;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .header {
+    padding-left: 4%;
+    padding-right: 2%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .header {
+    padding-top: 5%;
   }
 }
