--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,18 +6,26 @@
   text-decoration: none;
   list-style-type: none;
   max-width: 40vw;
-  margin: 7% 0 0;
+  margin: 3% 0 0;
   padding: 0;
 }
 
 @media screen and (min-width: 1280px) {
   .intro__list {
-    margin-top: 0;
+    margin-top: 5%;
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
   .intro__list {
     max-width: 80%;
+    margin: 5% 3% 0;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .intro__list {
+    max-width: 95%;
+    margin: 12% 0;
   }
 }
