--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,11 +5,18 @@
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  margin: 1% 5% 0;
+  margin: 1% 4% 0;
 }
 
 @media screen and (min-width: 1280px) {
   .lead__caption {
-    padding-left: 4%;
+    padding-left: 10%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .lead__caption {
+    padding-left: 2%;
+    margin-top: 2%;
   }
 }
