--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,11 +8,28 @@
   max-width: 720px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 1280px) {
+  .lead__title {
+    margin-top: 2.4%;
+  }
+}
+
+@media screen and (max-width: 730px) {
   .lead__title {
     font-size: 40px;
     line-height: 44px;
-    max-width: 288px;
-    margin: 0 auto;
+    max-width: 280px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .lead__title {
+    margin-top: 3%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .lead__title {
+    margin-top: 12%;
   }
 }
