--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,25 +5,30 @@
   max-width: 91vw;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
-  gap: 14px;
+  gap: 15px;
+  list-style-type: none;
 }
 
 @media screen and (min-width: 1280px) {
   .photo-grid {
     grid-template-columns: repeat(4, 1fr);
-    max-width: 98%;
-    padding: 0 1%;
+    padding: 0 3.5%;
   }
 }
 
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 900px) {
   .photo-grid {
     grid-template-columns: repeat(2, 1fr);
+    padding: 0 3%;
+    max-width: 99vw;
   }
 }
 
 @media screen and (max-width: 600px) {
   .photo-grid {
     grid-template-columns: 1fr;
+    max-width: 91%;
+    gap: 7px;
+    margin: 0 2%;
   }
 }
