--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -6,8 +6,8 @@
 
 @media screen and (min-width: 1280px) {
   .place__image {
-    width: 480px;
-    height: 480px;
+    width: 470px;
+    height: 470px;
   }
 }
 
@@ -18,11 +18,10 @@
   }
 }
 
-
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 450px) {
   .place__image {
-    width: 320px;
-    height: 320px;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 3% auto;
   }
 }
