--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,3 +1,9 @@
 .place__paragraph {
   margin: 4% 0 6%;
 }
+
+@media screen and (max-width: 900px) {
+  .place__paragraph {
+    margin: 6% 0 6%;
+  }
+}
