--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,9 +5,21 @@
   margin: 3% 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1280px) {
+  .place {
+    margin: 2.5% 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .place {
+    margin: 3% 0;
+  }
+}
+
+@media screen and (max-width: 650px) {
   .place {
     display: block;
-    margin: 0 15px;
+    margin: 0 0 9%;
   }
 }
