--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,14 +8,24 @@
 
 @media screen and (min-width: 1280px) {
   .places {
-    max-width: 80%;
+    max-width: 77%;
+    margin-top: 4.5%;
+    margin-bottom: 3%;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 550px) {
+@media screen and (max-width: 900px) {
+  .places {
+    max-width: 94vw;
+    margin-top: 8%;
+    margin-bottom: 8%;
+  }
+}
+
+@media screen and (max-width: 450px) {
   .places {
     max-width: 100%;
-    padding-top: 15%;
+    padding-top: 18%;
     margin: 0;
   }
 }
