--- a/blocks/website/website.css
+++ b/blocks/website/website.css
@@ -5,3 +5,10 @@
   padding: 0;
   margin: 0;
 }
+
+@media screen and (max-width: 450px) {
+  .website {
+    max-width: 100%;
+    margin: 8% 5%;
+  }
+}
