--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -22,3 +22,11 @@
     margin: 0 5%;
   }
 }
+
+@media screen and (min-width: 340px) and (max-width: 650px) {
+  .place__title {
+    margin: 0 auto;
+    text-align: center;
+    max-width: 70vw;
+  }
+}
