второй спринт на третье ревью

--- a/blocks/footer/__list-item/footer__list-item.css
+++ b/blocks/footer/__list-item/footer__list-item.css
@@ -1,5 +1,5 @@
 .footer__list-item {
-  padding-right: 5%;
+  padding-right: 4.5%;
   margin: 0;
 }
 
@@ -16,6 +16,12 @@
 
 @media screen and (max-width: 900px) {
   .footer__list-item {
-    padding-right: 7%;
+    padding-right: 6%;
+  }
+}
+
+@media screen and (min-width: 1150px) {
+  .footer__list-item {
+    padding-right: 3.5%;
   }
 }
