--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  max-width: 100%;
+  max-width: 1184px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 5px;
@@ -8,14 +8,14 @@
 
 @media screen and (min-width: 1280px) {
   .header {
-    padding: 2% 3.5%;
+    padding: 2%;
   }
 }
 
 @media screen and (min-width: 700px) {
   .header {
-    padding-left: 4%;
-    padding-right: 2%;
+    padding-left: 3%;
+    padding-right: 0;
   }
 }
 
