--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -12,3 +12,10 @@
     line-height: 35px;
   }
 }
+
+@media screen and (max-width: 950px) {
+  .intro__title {
+    margin-left: 2%;
+    margin-top: 12%;
+  }
+}
