--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,7 +14,7 @@
 
 @media screen and (min-width: 1280px) {
   .footer {
-    margin: 4.5% 0 0;
+    margin: 4.5% 0.5% 0;
     max-width: 100%;
   }
 }
