--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -2,19 +2,19 @@
   display: flex;
   justify-content: end;
   align-items: center;
-  margin: 0;
+  margin: 0 6% 0;
   padding-top: 2%;
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1150px) {
   .header__links {
-    padding: 4% 1% 0 0;
+    padding-top: 3%;
   }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 700px) and (max-width: 950px) {
   .header__links {
-    padding: 5% 1% 0 0;
+    padding: 4% 1% 0;
   }
 }
 
