--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,12 +5,12 @@
   line-height: 14px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  margin: 1% 4% 0;
+  margin: 1% 4.7% 0;
 }
 
 @media screen and (min-width: 1280px) {
   .lead__caption {
-    padding-left: 10%;
+    padding-left: 7.8%;
   }
 }
 
@@ -18,5 +18,11 @@
   .lead__caption {
     padding-left: 2%;
     margin-top: 2%;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .lead__caption {
+    margin-left: 3%;
   }
 }
