--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -12,7 +12,8 @@
 @media screen and (min-width: 1280px) {
   .photo-grid {
     grid-template-columns: repeat(4, 1fr);
-    padding: 0 3.5%;
+    max-width: 99vw;
+    padding: 0 4%;
   }
 }
 
