--- a/blocks/footer/__list-item/footer__list-item.css
+++ b/blocks/footer/__list-item/footer__list-item.css
@@ -9,8 +9,12 @@
 
 @media screen and (max-width: 700px) {
   .footer__list-item {
-    padding-bottom: 30px;
+    padding-bottom: 33px;
     padding-right: 0;
+  }
+
+  .footer__list-item:last-child {
+    padding-bottom: 0;
   }
 }
 
