--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -4,7 +4,7 @@
   font-size: 24px;
   line-height: 28px;
   text-decoration: none;
-  margin-right: 3%;
+  margin-right: 3.5%;
 }
 
 .header__link:hover {
@@ -22,9 +22,9 @@
   }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 700px) and (max-width: 950px) {
   .header__link {
-    margin-right: 5%;
+    margin-right: 6%;
   }
 }
 
