--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,7 +10,8 @@
 
 @media screen and (min-width: 1280px) {
   .lead__caption {
-    padding-left: 7.8%;
+    padding-left: 6.7%;
+    margin-top: 0.5%;
   }
 }
 
