--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -20,8 +20,8 @@
 
 @media screen and (max-width: 450px) {
   .place__image {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 320px;
+    max-height: 320px;
     margin: 3% auto;
   }
 }
