--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -17,7 +17,7 @@
 
 @media screen and (max-width: 650px) {
   .place__paragraphs {
-    margin: 0 5%;
+    margin: 2% 5% 0;
     max-width: 96%;
   }
 }
